# FlappyBird

./: .gitignore  AssetManager.cpp  AssetManager.h  Bird.cpp  Bird.h  CMakeLists.txt  Collision.cpp  Collision.h  Collisions.cpp  Collisions.h  FlappyBird  FlappyBird.cbp  Flash.cpp  Flash.h  Game.cpp  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  HUD.cpp  HUD.h  LICENSE.md  Land.h  MainMenuState.cpp  MainMenuState.h  Pipe.h  README.md  SplashState.h  main.cpp
engine/: Game.cpp  Game.h  InputManager.cpp  InputManager.h  State.h  StateMachine.cpp  StateMachine.h
game/: Bird.h  Config.h  Flash.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  HUD.h  Land.cpp  Land.h  MainMenuState.h  Pipe.cpp  Pipe.h  SplashState.cpp  SplashState.h
